[package]
name = "consistency"
version = "0.1.0"
authors = ["Rolly Fordham <rolly@luma.co.nz>"]
description = "A small crate that implements a consistently hashed ring of nodes"
documentation = "..."
homepage = "..."
repository = "..."
license = "MIT"

[dependencies]
rust-crypto = "^0.2"
lazy_static = "0.1.*"
clippy = "*"
