[package]
name = "consistency"
version = "1.0.0-pre.0"
authors = ["Rolly Fordham <rolly@luma.co.nz>"]
description = "A small crate that implements a consistently hashed ring of nodes"
keywords = ["consistent", "hashing", "distributed"]
homepage = "https://github.com/luma/consistency"
repository = "https://github.com/luma/consistency"
license = "MIT"

[dependencies]
rust-crypto = "^0.2"
clippy = "*"
